# rtb_python

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yml
docs/: summary_1.md
src/: logging_config.py  run_simulation.py
src/advertiser/: config.py  models.py  server.py  server2.py
src/advertiser/configs/: adv001_dev.toml  adv001_prod.toml  adv001_staging.toml  adv002_dev.toml  adv002_prod.toml  adv002_staging.toml
src/publisher/: config.py  engine.py  models.py  server.py
src/ssp/: config.py  exception_handlers.py  models.py  server.py
tests/: conftest.py
tests/integration/: conftest.py  test_publisher_ssp_integration.py  test_ssp_advertiser_integration.py
tests/unit/: conftest.py  test_logging_config.py  test_publisher_config.py  test_publisher_engine.py  test_publisher_models.py  test_publisher_server.py  test_ssp_config.py  test_ssp_exception_handlers.py  test_ssp_models.py
