[project]
name = "rtb-python"
version = "0.1.0"
description = "Real-Time Bidding simulation in Python"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (DB, services)",
    "api: API tests (HTTP endpoints)",
]
addopts = "-v --tb=short"

# Run only unit tests by default:
#   pytest -m unit
# Run all tests:
#   pytest

